--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.1",
     "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.5.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -38,6 +43,10 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.5.7"
+    "@types/axios": "^0.14.0",
+    "@types/leaflet": "^1.5.7",
+    "@types/react-redux": "^7.1.6",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0"
   }
 }
