--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "geojson-server",
+  "scripts": {
+    "start": "node dist/server.js"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node": "^13.6.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.1.8",
+    "typescript": "^3.7.5"
   }
 }
