--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
   "name": "geojson-server",
   "scripts": {
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "build": "tsc --watch --preserveWatchOutput"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -9,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/leaflet": "^1.5.8",
     "@types/node": "^13.1.8",
     "typescript": "^3.7.5"
   }
