--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.1",
+    "d3": "^5.15.0",
     "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/d3": "^5.7.2",
     "@types/leaflet": "^1.5.7",
     "@types/react-redux": "^7.1.6",
     "@types/redux": "^3.6.0",
