--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,9 @@
     "@types/leaflet": "^1.5.7",
     "@types/react-redux": "^7.1.6",
     "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0"
+    "@types/redux-mock-store": "^1.0.1",
+    "@types/redux-thunk": "^2.1.0",
+    "axios-mock-adapter": "^1.17.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
