--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.0.5",
     "redux-devtools": "^3.5.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "typestyle": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
